Tweak temperature monitor to do 24h, 7d and 1yr snaphots

--- a/template.html
+++ b/template.html
@@ -20,7 +20,14 @@
         </ul>
     </p>
 
-    <img src="temperature.png" alt="Air/Water Temperature">
+    <h2>Last 24 Hours</h2>
+    <img src="temperature-24h.png" alt="Air/Water Temperature Last 24 Hours">
+
+    <h2>Last 7 Days</h2>
+    <img src="temperature-7d.png" alt="Air/Water Temperature Last 7 days">
+
+    <h2>Last 12 Months</h2>
+    <img src="temperature-1y.png" alt="Air/Water Temperature Last 12 months">
 </body>
 </html>
 
